DevOps/Kubernetes/99.Samples/aspnet5/kubernetes/Ingress/ingress-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-k8s-blue-service # The name of the service
  namespace: demo-k8s
spec:
  type: NodePort
  selector:
    app: demo-k8s-blue # The lable of pods
  ports:
    - name: http-port
      protocol: TCP
      port: 3000 # The port of service to expose
      targetPort: 5000 # The port that service will send requests to, that your pod will be listening on.
    - name: https-port
      protocol: TCP
      port: 3001
      targetPort: 5001

---
apiVersion: v1
kind: Service
metadata:
  name: demo-k8s-grey-service # The name of the service
  namespace: demo-k8s
spec:
  type: NodePort
  selector:
    app: demo-k8s-grey # The lable of pods
  ports:
    - name: http-port
      protocol: TCP
      port: 3000 # The port of service to expose
      targetPort: 5000 # The port that service will send requests to, that your pod will be listening on.
    - name: https-port
      protocol: TCP
      port: 3001
      targetPort: 5001
